examples/test/testpolicy1641.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy1641
  namespace: namespace4
spec:
  podSelector:
    matchLabels:
      key39: value22
      key6: value47
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key14: value17
      podSelector:
        matchLabels:
          key18: value34
          key48: value26
